--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "develop": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
-    "strapi": "strapi"
+    "strapi": "strapi",
+    "gulp": "gulp"
   },
   "dependencies": {
     "@strapi/plugin-i18n": "4.12.7",
     "@strapi/plugin-users-permissions": "4.12.7",
     "@strapi/strapi": "4.12.7",
     "better-sqlite3": "8.5.0",
+    "gulp": "^4.0.2",
+    "gulp-swig": "^0.9.1",
     "koa-mount": "^4.0.0",
     "koa-router": "^12.0.0",
     "koa-swig": "^2.2.1"
